<resources>
    <string name="app_name">BoardMe</string>
    <string name="BoardMe">BoardMe</string>
    <string name="SignIn">SignIn</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Alreadyhaveanaccount">Already have an account</string>
    <string name="SignUp">SignUp</string>
    <string name="Needanaccount">Need an account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="telephone">Telephone</string>
    <string name="check_your_email_inbox">Check your email inbox</string>
    <string name="verify_your_email_to_signin">Verify Your Email to SIGNIN</string>
    <string name="bathrooms">Bathrooms:</string>
    <string name="price">Price :</string>
    <string name="rooms1">Rooms</string>
    <string name="rooms" />
    <string name="my_profile">\u0020\u0020My Profile</string>
    <string name="bookings">\u0020\u0020Bookings</string>
    <string name="q_amp_a">\u0020\u0020<![CDATA[Q&A]]></string>
    <string name="about_us">\u0020\u0020About Us</string>
    <string name="log_out">\u0020\u0020Log out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="todo">TODO</string>
    <string name="profile">Profile</string>
    <string name="editProperty">Edit</string>
    <string name="deleteSingleProperty">Delete</string>
    <string name="proprtyimage">ProprtyImage</string>
    <string name="booknow">BookNow</string>
    <string name="book_now">Book Now</string>
    <string name="description">Description</string>
    <string name="book_now_button">BOOK NOW</string>
    <string name="advance">Advance</string>
    <string name="address">Address</string>
    <string name="my_bookings">My Bookings</string>
    <string name="profilephoto">ProfilePhoto</string>
    <string name="textview">TextView</string>
    <string name="my_boarding_places">My Boarding Places</string>
    <string name="add_a_boarding">Add a Boarding</string>
    <string name="booking_requests">Booking Requests</string>
    <string name="topic_about_us">About Us</string>
    <string name="description_about_us">BoardMe has the widest selection of popular boarding places all over Sri Lanka, which makes it easy to find exactly what you are looking for.So if you are looking for a you will find the best deal on BoardMe</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
    <string name="request_from_stu_parent_name">Request from stu_parent name</string>
    <string name="request_deatails">Request Deatails</string>
    <string name="booking_details">Booking details</string>
    <string name="AddboardingButton">Add</string>
    <string name="addImage">Add Image</string>
    <string name="dbtext3">Sandun D.K.(id-23)</string>
    <string name="dbtext">Wijesinghe G.K(id 12)</string>
    <string name="btndelete">Delete</string>
    <string name="dbtext4">Ayesh P.K(id-2)</string>
    <string name="dbtext2">Sadara Q.P.(id-4)</string>
    <string name="QandA">Q and A</string>
    <string name="propertymanagement">Property Management</string>
    <string name="usermanagement">User Management</string>
    <string name="addboarding">Add Boarding</string>
    <string name="name">Name</string>
    <string name="phonenum">Phone Number</string>
    <string name="protext">Property Management</string>


    <string-array name="users">
        <item>Parent</item>
        <item>Student</item>
        <item>Owner</item>
    </string-array>
</resources>
