<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivBoardLogo"
        android:layout_width="match_parent"
        android:layout_height="122dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/house" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/BoardMe"
        android:textColor="#DD373738"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBoardLogo" />

    <TextView
        android:id="@+id/tvHaveAccount"
        android:layout_width="330dp"
        android:layout_height="37dp"
        android:layout_marginTop="15dp"
        android:text="@string/Alreadyhaveanaccount"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/inputfield"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvHaveAccount" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/inputfield"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <Button
        android:id="@+id/bSignin"
        android:layout_width="186dp"
        android:layout_height="50dp"
        android:layout_marginTop="29dp"
        android:background="@drawable/button"
        android:padding="10dp"
        android:text="@string/SignIn"
        android:textColor="#E9D5D5"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvNeedAccount"
        android:layout_width="202dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/Needanaccount"
        android:textAlignment="center"
        android:textColor="#E1242424"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSignin" />

    <Button
        android:id="@+id/bSignUp"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button"
        android:padding="10dp"
        android:text="@string/SignUp"
        android:textColor="#E9D5D5"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvNeedAccount"
        app:layout_constraintTop_toBottomOf="@+id/bSignin" />

</androidx.constraintlayout.widget.ConstraintLayout>