<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HomeForAll"
    android:id="@+id/drawer">

<LinearLayout
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BookNow">

    <TextView
        android:id="@+id/tvbooknow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/book_now"
        android:textColor="@color/book_now_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ptadvance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/inputfield"
        android:ems="10"
        android:hint="@string/advance"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ptDescription"
        android:layout_width="match_parent"
        android:layout_height="162dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/inputfield"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingBottom="100dp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/bookProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/progress" />

    <Button
        android:id="@+id/btnbooknow"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/button"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/book_now_button"
        android:textColor="#E9D5D5"
        android:textSize="21sp"
        android:textStyle="bold" />

</LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navVieww"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        app:menu="@menu/nav_menu_list"
        android:background="@color/nav_lower_part"
        app:headerLayout="@layout/nav_header"
        app:itemTextColor="@color/nav_menu_color"
        android:layout_gravity="start">


    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>